[BACKEND/API] Update User and Role object to have correct datas
