# backend/srcs/handlers/users/post.go
@@ -15,7 +15,7 @@ import (
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        input body UserPatchInput true "User input"
+// @Param        input body UserPostInput true "User input"
 // @Success      200 {object} User
 // @Router       /users [post]
 func PostUser(w http.ResponseWriter, r *http.Request) {
@@ -25,13 +25,7 @@ func PostUser(w http.ResponseWriter, r *http.Request) {
 	entropy := ulid.Monotonic(rand.New(rand.NewSource(t.UnixNano())), 0)
 	id := ulid.MustNew(ulid.Timestamp(t), entropy)
 	dest := User{
-		ID:            id.String(),
-		Name:          "Test",
-		Version:       "1.2",
-		Status:        Enabled,
-		URL:           "https://github.com/some-user/some-repo",
-		LatestVersion: "1.7",
-		LastUpdate:    time.Date(2025, 02, 18, 15, 0, 0, 0, time.UTC),
+		ID: id.String(),
 	}
 
 	// Marshal the dest struct into JSON
